// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-deploy - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Execute Azure deployments for already-prepared applications. This skill runs azd up, azd deploy, terraform apply, and az deployment commands with built-in error recovery, retry logic, and deployment verification. Requires .azure/plan.md from azure-prepare and validated status from azure-validate. WHEN: "run azd up", "run azd deploy", "execute deployment", "provision infrastructure", "push to production", "push to cloud", "go live", "ship it", "bicep deploy", "terraform apply", "publish to Azure", "launch on Azure".",
  "extractedKeywords": [
    "already-prepared",
    "applications",
    "apply",
    "azure",
    "azure-prepare",
    "azure-validate",
    "bicep",
    "built-in",
    "cli",
    "cloud",
    "commands",
    "deploy",
    "deployment",
    "deployments",
    "error",
    "execute",
    "from",
    "identity",
    "infrastructure",
    "launch",
    "live",
    "logic",
    "mcp",
    "plan",
    "production",
    "provision",
    "publish",
    "push",
    "recovery",
    "requires",
    "retry",
    "runs",
    "ship",
    "skill",
    "status",
    "terraform",
    "this",
    "validated",
    "validation",
    "verification",
    "when",
    "with",
  ],
  "name": "azure-deploy",
}
`;

exports[`azure-deploy - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "already-prepared",
  "applications",
  "apply",
  "azure",
  "azure-prepare",
  "azure-validate",
  "bicep",
  "built-in",
  "cli",
  "cloud",
  "commands",
  "deploy",
  "deployment",
  "deployments",
  "error",
  "execute",
  "from",
  "identity",
  "infrastructure",
  "launch",
  "live",
  "logic",
  "mcp",
  "plan",
  "production",
  "provision",
  "publish",
  "push",
  "recovery",
  "requires",
  "retry",
  "runs",
  "ship",
  "skill",
  "status",
  "terraform",
  "this",
  "validated",
  "validation",
  "verification",
  "when",
  "with",
]
`;
